--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/index.css">
         <script src="js/jquery.js" charset="utf-8"></script>
         <script src="js/swiper.js" charset="utf-8"></script>
+        <script src="js/default.js" charset="utf-8"></script>
 
     </head>
     <body>
@@ -74,10 +75,10 @@
                 <a href="" class="allmen">전체보기<img src="images/bu_arrow_right.png" alt=""></a>
             </aside>
 
-            <section class="cearch10">
+            <section class="search10 border">
                 <h2 class="hide">실시간검색어</h2>
-                <button class="more">더보기</button>
-                <div class="swiper-container">
+                <button class="more"><span class="hide">더보기</span></button>
+                <div class = "swiper-container slide1">
                     <ol class="swiper-wrapper">
                         <li class="swiper-slide">
                             <a href="">
@@ -85,95 +86,52 @@
                                 <div>1 (주)JYP엔터테이먼트</div>
                             </a>
                         </li>
-                    </ol>
-                </div>
-                <div class="swiper-container">
-                    <ol class="swiper-wrapper">
                         <li class="swiper-slide">
                             <a href="">
-                                <span>TOP100</span>
                                 <div>2 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li>
-                    </ol>
-                </div>
-                <div class="swiper-container">
-                    <ol class="swiper-wrapper">
-                        <li class="swiper-slide">
+                        </li> <li class="swiper-slide">
                             <a href="">
                                 <span>TOP100</span>
                                 <div>3 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li>
-                    </ol>
-                </div>
-                <div class="swiper-container">
-                    <ol class="swiper-wrapper">
-                        <li class="swiper-slide">
+                        </li> <li class="swiper-slide">
                             <a href="">
                                 <div>4 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li>
-                    </ol>
-                </div>
-                <div class="swiper-container">
-                    <ol class="swiper-wrapper">
-                        <li class="swiper-slide">
+                        </li> <li class="swiper-slide">
                             <a href="">
+                                <span>TOP100</span>
                                 <div>5 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li>
-                    </ol>
-                </div>
-                <div class="swiper-container">
-                    <ol class="swiper-wrapper">
-                        <li class="swiper-slide">
+                        </li> <li class="swiper-slide">
                             <a href="">
                                 <span>TOP100</span>
                                 <div>6 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li>
-                    </ol>
-                </div>
-                <div class="swiper-container">
-                    <ol class="swiper-wrapper">
-                        <li class="swiper-slide">
+                        </li> <li class="swiper-slide">
                             <a href="">
                                 <div>7 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li>
-                    </ol>
-                </div>
-                <div class="swiper-container">
-                    <ol class="swiper-wrapper">
-                        <li class="swiper-slide">
+                        </li> <li class="swiper-slide">
                             <a href="">
                                 <span>TOP100</span>
                                 <div>8 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li>
-                    </ol>
-                </div>
-                <div class="swiper-container">
-                    <ol class="swiper-wrapper">
-                        <li class="swiper-slide">
+                        </li> <li class="swiper-slide">
                             <a href="">
-                                <span>TOP100</span>
                                 <div>9 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li>
-                    </ol>
-                </div>
-                <div class="swiper-container">
-                    <ol class="swiper-wrapper">
-                        <li class="swiper-slide">
+                        </li> <li class="swiper-slide">
                             <a href="">
-                                <span>TOP100</span>
                                 <div>10 (주)JYP엔터테이먼트</div>
                             </a>
                         </li>
+
+
                     </ol>
                 </div>
+                
 
             </section>
         </main>
