--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
 
             <section class="search10 border">
                 <h2 class="hide">실시간검색어</h2>
-                <button class="more"><span class="hide">더보기</span></button>
-                <div class = "swiper-container slide1">
+                <button class="more">
+                    <span class="hide">더보기</span></button>
+                <div class="swiper-container slide1">
                     <ol class="swiper-wrapper">
                         <li class="swiper-slide">
                             <a href="">
@@ -90,48 +91,54 @@
                             <a href="">
                                 <div>2 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li> <li class="swiper-slide">
+                        </li>
+                        <li class="swiper-slide">
                             <a href="">
                                 <span>TOP100</span>
                                 <div>3 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li> <li class="swiper-slide">
+                        </li>
+                        <li class="swiper-slide">
                             <a href="">
                                 <div>4 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li> <li class="swiper-slide">
+                        </li>
+                        <li class="swiper-slide">
                             <a href="">
                                 <span>TOP100</span>
                                 <div>5 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li> <li class="swiper-slide">
+                        </li>
+                        <li class="swiper-slide">
                             <a href="">
                                 <span>TOP100</span>
                                 <div>6 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li> <li class="swiper-slide">
+                        </li>
+                        <li class="swiper-slide">
                             <a href="">
                                 <div>7 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li> <li class="swiper-slide">
+                        </li>
+                        <li class="swiper-slide">
                             <a href="">
                                 <span>TOP100</span>
                                 <div>8 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li> <li class="swiper-slide">
+                        </li>
+                        <li class="swiper-slide">
                             <a href="">
                                 <div>9 (주)JYP엔터테이먼트</div>
                             </a>
-                        </li> <li class="swiper-slide">
+                        </li>
+                        <li class="swiper-slide">
                             <a href="">
                                 <div>10 (주)JYP엔터테이먼트</div>
                             </a>
                         </li>
 
-
                     </ol>
                 </div>
-                
 
             </section>
         </main>
